--- a/GestorTeocratico/Components/Pages/Responsibility/CreateResponsibility.razor
+++ b/GestorTeocratico/Components/Pages/Responsibility/CreateResponsibility.razor
@@ -3,25 +3,25 @@
 @inject DialogService DialogService
 @inject GestorTeocratico.Features.Responsibilities.IResponsibilityService ResponsibilityService
 
-<PageTitle>Add Responsibility</PageTitle>
+<PageTitle>Agregar Responsabilidad</PageTitle>
 <RadzenColumn SizeMD=12>
     <RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Danger"
-                 Visible="@_errorVisible">Cannot save Responsibility
+                 Visible="@_errorVisible">No se puede guardar la responsabilidad
     </RadzenAlert>
     <RadzenTemplateForm TItem="Responsibility" Data="@(_responsibility)" Visible="@(_responsibility != null)"
                         Submit="@HandleValidSubmit">
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Name" Component="Name" style="width: 100%"/>
+                <RadzenLabel Text="Nombre" Component="Name" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenTextBox style="display: block; width: 100%" @bind-Value="@(_responsibility.Name)" Name="Name"/>
-                <RadzenRequiredValidator Component="Name" Text="Name is required"/>
+                <RadzenRequiredValidator Component="Name" Text="El nombre es obligatorio"/>
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Description" Component="Description" style="width: 100%"/>
+                <RadzenLabel Text="Descripción" Component="Description" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenTextArea style="display: block; width: 100%" @bind-Value="@(_responsibility.Description)" 
@@ -30,7 +30,7 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Department" Component="DepartmentId" style="width: 100%"/>
+                <RadzenLabel Text="Departamento" Component="DepartmentId" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenDropDown @bind-Value="@_responsibility.DepartmentId" 
@@ -38,14 +38,14 @@
                                 TextProperty="@nameof(Department.Name)" 
                                 ValueProperty="@nameof(Department.DepartmentId)"
                                 AllowClear="true"
-                                Placeholder="Select department (optional)"
+                                Placeholder="Selecciona departamento (opcional)"
                                 Style="width: 100%; max-width: 400px;" 
                                 Name="DepartmentId" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Assigned Publishers" Component="PublisherIds" style="width: 100%"/>
+                <RadzenLabel Text="Publicadores Asignados" Component="PublisherIds" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenDropDown @bind-Value="@_selectedPublisherIds" 
@@ -54,16 +54,16 @@
                                 ValueProperty="@nameof(PublisherOption.PublisherId)"
                                 Multiple="true"
                                 AllowClear="true"
-                                Placeholder="Select publishers (optional)"
+                                Placeholder="Selecciona publicadores (opcional)"
                                 Style="width: 100%; max-width: 400px;" 
                                 Name="PublisherIds" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center"
                      JustifyContent="JustifyContent.End" Gap="0.5rem">
-            <RadzenButton ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Submit" Icon="save" Text="Save"
+            <RadzenButton ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Submit" Icon="save" Text="Guardar"
                           Variant="Variant.Flat"/>
-            <RadzenButton ButtonStyle="ButtonStyle.Light" Text="Cancel" Variant="Variant.Flat"
+            <RadzenButton ButtonStyle="ButtonStyle.Light" Text="Cancelar" Variant="Variant.Flat"
                           Click="@CancelButtonClick"/>
         </RadzenStack>
     </RadzenTemplateForm>
