--- a/GestorTeocratico/Components/Pages/Responsibility/Responsibilities.razor
+++ b/GestorTeocratico/Components/Pages/Responsibility/Responsibilities.razor
@@ -5,11 +5,11 @@
 @inject DialogService DialogService
 @inject NotificationService NotificationService
 
-<PageTitle>Responsibilities</PageTitle>
+<PageTitle>Responsabilidades</PageTitle>
 <RadzenStack>
     <RadzenRow AlignItems="AlignItems.Center">
         <RadzenColumn Size="12" SizeMD="6">
-            <RadzenText Text="Responsibilities" TextStyle="TextStyle.H3" TagName="TagName.H1" style="margin: 0"/>
+            <RadzenText Text="Responsabilidades" TextStyle="TextStyle.H3" TagName="TagName.H1" style="margin: 0"/>
         </RadzenColumn>
         <RadzenColumn Size="12" SizeMD="6">
             <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center"
@@ -25,8 +25,8 @@
                             PageSizeOptions=@(new int[] { 5, 10, 20, 30 })
                             Data="@(_responsibilities)" >
                 <Columns>
-                    <RadzenDataGridColumn Property="@nameof(Responsibility.Name)" Title="Name"/>
-                    <RadzenDataGridColumn Property="@nameof(Responsibility.Description)" Title="Description">
+                    <RadzenDataGridColumn Property="@nameof(Responsibility.Name)" Title="Nombre"/>
+                    <RadzenDataGridColumn Property="@nameof(Responsibility.Description)" Title="Descripción">
                         <Template Context="responsibility">
                             @if (!string.IsNullOrEmpty(responsibility.Description))
                             {
@@ -38,7 +38,7 @@
                             }
                         </Template>
                     </RadzenDataGridColumn>
-                    <RadzenDataGridColumn Property="@nameof(Responsibility.Department)" Title="Department">
+                    <RadzenDataGridColumn Property="@nameof(Responsibility.Department)" Title="Departamento">
                         <Template Context="responsibility">
                             @if (responsibility.Department != null)
                             {
@@ -50,7 +50,7 @@
                             }
                         </Template>
                     </RadzenDataGridColumn>
-                    <RadzenDataGridColumn Property="@nameof(Responsibility.PublisherResponsibilities)" Title="Assigned Publishers">
+                    <RadzenDataGridColumn Property="@nameof(Responsibility.PublisherResponsibilities)" Title="Publicadores Asignados">
                         <Template Context="responsibility">
                             @if (responsibility.PublisherResponsibilities?.Any() == true)
                             {
@@ -66,7 +66,7 @@
                             }
                         </Template>
                     </RadzenDataGridColumn>
-                    <RadzenDataGridColumn Filterable="false" Sortable="false" Width="150px" Title="Actions"
+                    <RadzenDataGridColumn Filterable="false" Sortable="false" Width="150px" Title="Acciones"
                                           TextAlign="TextAlign.Center">
                         <Template Context="responsibility">
                             <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Flat"
@@ -95,13 +95,13 @@
 
     private async Task AddButtonClick(MouseEventArgs args)
     {
-        await DialogService.OpenAsync<CreateResponsibility>("Create Responsibility", null);
+        await DialogService.OpenAsync<CreateResponsibility>("Agregar Responsabilidad", null);
         await grid0.Reload();
     }
 
     private async Task EditRow(Responsibility args)
     {
-        await DialogService.OpenAsync<EditResponsibility>("Edit Responsibility", new Dictionary<string, object> { { "ResponsibilityId", args.ResponsibilityId } });
+        await DialogService.OpenAsync<EditResponsibility>("Editar Responsabilidad", new Dictionary<string, object> { { "ResponsibilityId", args.ResponsibilityId } });
         await grid0.Reload();
     }
 
@@ -109,7 +109,7 @@
     {
         try
         {
-            if (await DialogService.Confirm("Are you sure you want to delete this record?") == true)
+            if (await DialogService.Confirm("¿Está seguro que desea eliminar este registro?", "Confirmar", new ConfirmOptions { OkButtonText = "Eliminar", CancelButtonText = "Cancelar" }) == true)
             {
                 var deleteResult = await ResponsibilityService.DeleteAsync(responsibility.ResponsibilityId);
                 await grid0.Reload();
@@ -121,7 +121,7 @@
             {
                 Severity = NotificationSeverity.Error,
                 Summary = $"Error",
-                Detail = $"Unable to delete Responsibility"
+                Detail = $"No se pudo eliminar la responsabilidad"
             });
         }
     }
